--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,10 +81,13 @@
             android:text="所有图片"
             android:textColor="#fff"
             android:textSize="18sp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"/>
 
         <ImageView
+            android:id="@+id/iv_footer_file_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/footer_16"
@@ -126,6 +129,37 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"/>
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_file_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/rl_gallery_footer"
+        android:layout_below="@+id/gallery_title"
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/view_file_list_background"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            android:background="#000"
+            android:layout_above="@+id/rv_file_list"/>
+        <!--android:layout_above="@+id/rl_gallery_footer"-->
+        <!--android:layout_below="@+id/gallery_title"-->
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_file_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#fff"
+            android:visibility="invisible"
+            android:padding="4dp"
+            android:layout_alignParentBottom="true">
+            <!--android:layout_above="@+id/rl_gallery_footer"-->
+
+        </android.support.v7.widget.RecyclerView>
     </RelativeLayout>
 
 
