--- a/app/src/main/res/layout/item_preview_viewpager.xml
+++ b/app/src/main/res/layout/item_preview_viewpager.xml
@@ -5,6 +5,7 @@
               android:layout_height="match_parent">
 
     <com.lam.gallery.ui.PreViewImageView
+        android:id="@+id/pr_preview_media"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/loading"/>
