<chore> 基本完成图片展示相关的功能
<body>

<footer> 有很多逻辑上的问题待处理
耦合性挺强的需要再解耦

--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.lam.gallery.activity.PreviewActivity">
 
-    <com.lam.gallery.ui.PreViewViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/vp_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:background="#1b1b1b">
 
-    </com.lam.gallery.ui.PreViewViewPager>
+    </android.support.v4.view.ViewPager>
 
     <RelativeLayout
         android:layout_width="match_parent"
