--- a/app/src/main/res/anim/from_alpha_to_translucent.xml
+++ b/app/src/main/res/anim/from_alpha_to_translucent.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-       android:duration="300"
-       android:fillAfter="true"
-       android:fromAlpha="0.0"
-       android:toAlpha="0.85" >
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+     android:duration="300">
 
-</alpha>
+    <alpha
+           android:fillAfter="true"
+           android:fromAlpha="0.0"
+           android:toAlpha="0.85" >
+
+    </alpha>
+    <translate
+               android:fromYDelta="0%"
+               android:toYDelta="0%" >
+
+    </translate>
+
+</set>
