--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,57 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.lam.gallery.activity.MainActivity">
+    tools:context="com.lam.gallery.activity.MainActivity" >
 
-    <RelativeLayout
-        android:id="@+id/gallery_title"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-        <ImageView
-            android:id="@+id/iv_title_left_point"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/back_32"
-            android:paddingLeft="10dp"
-            android:layout_centerVertical="true"/>
-
-        <View
-            android:id="@+id/view_title_line"
-            android:layout_width="1dp"
-            android:layout_height="32dp"
-            android:background="#cb1a1a1a"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/iv_title_left_point"
-            android:layout_margin="10dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:text="所有图片"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:layout_margin="10dp"
-            android:textSize="20sp"
-            android:layout_toRightOf="@+id/view_title_line"/>
-
-        <Button
-            android:id="@+id/bt_title_send"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="发送"
-            android:textColor="#a1a1a1"
-            android:textSize="15sp"
-            android:background="#094909"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"/>
-
-    </RelativeLayout>
+    <include
+        layout="@layout/part_header"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_gallery_grid"
@@ -66,101 +19,10 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <RelativeLayout
-        android:id="@+id/rl_gallery_footer"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+    <include
+        layout="@layout/part_grid_footer" />
 
-        <TextView
-            android:id="@+id/tv_footer_file_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="所有图片"
-            android:textColor="#fff"
-            android:textSize="18sp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"/>
-
-        <ImageView
-            android:id="@+id/iv_footer_file_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/footer_16"
-            android:layout_centerVertical="true"
-            android:paddingTop="6dp"
-            android:layout_toRightOf="@+id/tv_footer_file_name"
-            />
-
-        <ImageView
-            android:id="@+id/iv_footer_origin"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/footer_circle_16"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:paddingRight="35dp"/>
-
-        <TextView
-            android:id="@+id/tv_footer_origin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="原图"
-            android:textColor="#fff"
-            android:textSize="18sp"
-            android:paddingLeft="35dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>
-
-        <TextView
-            android:id="@+id/tv_footer_preview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="预览"
-            android:textColor="#5b5b5b"
-            android:textSize="18sp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_file_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/rl_gallery_footer"
-        android:layout_below="@+id/gallery_title"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/view_file_list_background"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:visibility="invisible"
-            android:background="#000"
-            android:layout_above="@+id/rv_file_list"/>
-        <!--android:layout_above="@+id/rl_gallery_footer"-->
-        <!--android:layout_below="@+id/gallery_title"-->
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_file_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="#fff"
-            android:visibility="invisible"
-            android:padding="4dp"
-            android:layout_alignParentBottom="true">
-            <!--android:layout_above="@+id/rl_gallery_footer"-->
-
-        </android.support.v7.widget.RecyclerView>
-    </RelativeLayout>
-
+    <include
+        layout="@layout/part_file_list" />
 
 </RelativeLayout>
