--- a/app/src/main/res/layout/item_file_list.xml
+++ b/app/src/main/res/layout/item_file_list.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:text="所有图片"
         android:layout_marginLeft="10dp"
+        android:layout_alignParentRight="true"
         android:paddingBottom="15dp"
         android:textColor="#000"
         android:textSize="16sp"
@@ -30,6 +31,8 @@
         android:id="@+id/tv_file_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="0张"
+        android:layout_alignParentRight="true"
         android:layout_marginLeft="10dp"
         android:paddingTop="15dp"
         android:textColor="#838282"
