--- a/app/src/main/res/layout/activity_pre_view.xml
+++ b/app/src/main/res/layout/activity_pre_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lam.gallery.activity.PreViewActivity">
+    tools:context="com.lam.gallery.activity.PreviewActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_preview"
