--- a/galleryhome/src/main/res/layout/activity_home.xml
+++ b/galleryhome/src/main/res/layout/activity_home.xml
@@ -4,19 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/bt_select_picture"
+    <RelativeLayout
+        android:id="@+id/rl_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="选择图片"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:id="@+id/bt_select_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="选择图片"
+            android:layout_alignParentTop="true"/>
+
+        <Button
+            android:id="@+id/bt_clear_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="清除选择"
+            android:layout_toRightOf="@+id/bt_select_picture"
+            android:layout_alignParentTop="true"/>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_show_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/bt_select_picture">
+        android:layout_below="@+id/rl_menu">
 
     </android.support.v7.widget.RecyclerView>
 
