--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#292b29</color>
     <color name="colorPrimaryDark">#292b29</color>
     <color name="colorAccent">#87839e</color>
+    <color name="colorClick">#5b5b5b</color>
+    <color name="colorText">#FFFFFFFF</color>
 </resources>
