--- a/app/src/main/res/layout/part_grid_footer.xml
+++ b/app/src/main/res/layout/part_grid_footer.xml
@@ -12,7 +12,7 @@ android:layout_alignParentStart="true">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="所有图片"
-    android:textColor="#fff"
+    android:textColor="@color/click_color_change"
     android:textSize="18sp"
     android:paddingTop="15dp"
     android:paddingBottom="15dp"
