--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.lam.gallery.activity.MainActivity" >
+    tools:context=".ui.MainActivity" >
 
     <include
         layout="@layout/part_header"/>
