fix(PermissionActivity/HomeActivity/res-values):修改权限申请问题 将原来的继承的方式进行权限申请修改为设置透明activity dialog申请权限

--- a/galleryhome/src/main/res/values/styles.xml
+++ b/galleryhome/src/main/res/values/styles.xml
@@ -9,4 +9,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="EmptyTheme" parent="Theme.AppCompat.Dialog" >
+        <item name="android:windowBackground">@color/alpha</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
+    </style>
+
 </resources>
