--- a/galleryhome/src/main/res/values/colors.xml
+++ b/galleryhome/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#87839e</color>
     <color name="colorClick">#5b5b5b</color>
     <color name="colorText">#FFFFFFFF</color>
+    <color name="alpha">#00000000</color>
 </resources>
